# project_oop

./: .gitignore  Account.cpp  Account.h  Asya.json  Budget.h  CMakeLists.txt  Category.h  CurrencyConverter.cpp  CurrencyConverter.h  Database.cpp  Database.h  Doxyfile.txt  ExponentialSmoothingStrategy.cpp  ExponentialSmoothingStrategy.h  Exporte.cpp  Exporter.cpp  Exporter.h  Forecast.cpp  Forecast.h  ForecastModel.cpp  ForecastModel.h  ForecastStrategy.h  GLOSSARY.md  Importer.cpp  Importer.h  MovingAverageStrategy.cpp  MovingAverageStrategy.h  README.md  REFACTORING_REPORT.md  ReportGenerator.cpp  ReportGenerator.h  Result.h  Transaction.cpp  Transaction.h  UML_REPORT.md  User.h  main.cpp  vcpkg.json
.github/workflows/: docs.yml
benchmarks/: CMakeLists.txt  benchmark_account.cpp  benchmark_database.cpp  benchmark_exporter.cpp  benchmark_forecast.cpp  benchmark_forecast_strategy.cpp  benchmark_main.cpp  benchmark_report_generator.cpp
fixed/: Account.h  Budget.h  CMakeLists.txt  CurrencyConverter.cpp  CurrencyConverter.h  CurrencyConverter_README.md  Database.h  Exporter.cpp  Exporter.h  Forecast.cpp  Forecast.h  ForecastStrategy.h  Importer.cpp  Importer.h  MovingAverageStrategy.cpp  MovingAverageStrategy.h  ReportGenerator.cpp  ReportGenerator.h  Result.h  Transaction.h  User.h  main.cpp
fixed/tests/: test_currency_converter.cpp  test_forecast_strategy.cpp  test_report_generator.cpp
gui_app/: CMakeLists.txt  main.cpp  resources.qrc
gui_app/core/: Logic.cpp  Logic.h
gui_app/gui/: .gitignore  DataWindow.cpp  DataWindow.h  ForecastWindow.cpp  ForecastWindow.h  MainWindow.cpp  MainWindow.h  ReportsWindow.cpp  ReportsWindow.h  ShowTransactionsWindow.cpp  ShowTransactionsWindow.h  TransactionsWindow.cpp  TransactionsWindow.h  main.cpp
gui_app/translations/: MyFinanceApp_en.qm  MyFinanceApp_en.ts  MyFinanceApp_uk.qm  MyFinanceApp_uk.ts
tests/: test_account.cpp  test_budget.cpp  test_category.cpp  test_database.cpp  test_exporter.cpp  test_forecast.cpp  test_forecast_strategy.cpp  test_importer.cpp  test_transaction.cpp
